- 
    
Bug
 - 
    Resolution: Done
 - 
    
  Not Evaluated                     
     - 
    None
 - 
    5.14.2
 - 
    None
 - 
    win10/vs2017/vs2019
 
- 
        
 - 
        b00fc4676127cd28d3fb2a14874d363a19ba1475 (qt/qtbase/5.15)
 
compile error from qmutex.h
defaulted default constructor cannot be constexpr because the corresponding implicitly declared default constructor would not be constexpr
its location is here:

downgrade to qt5.13.2 solved this bug.